k8s/12-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: movie-downloader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/gorantopic/movie-downloader-frontend:1576da1f13b5218a083f6e3e6724f412a768af26
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 96Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: movie-downloader
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
