k8s/20-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-downloader
  namespace: movie-downloader
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - moviedownloader.gorantopic.com
        - api.moviedownloader.gorantopic.com
      secretName: movie-downloader-tls
  rules:
    - host: moviedownloader.gorantopic.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
    - host: api.moviedownloader.gorantopic.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3001
