k8s/22-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-moviedownloader
  namespace: movie-downloader
spec:
  redirectRegex:
    regex: ^https://teracsmoviedownloader\.gorantopic\.com/(.*)
    replacement: https://moviedownloader.gorantopic.com/${1}
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-downloader-redirect
  namespace: movie-downloader
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: movie-downloader-redirect-to-moviedownloader@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - teracsmoviedownloader.gorantopic.com
      secretName: movie-downloader-redirect-tls
  rules:
    - host: teracsmoviedownloader.gorantopic.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
